add_executable(example example.cpp)
add_executable(guessds 01-programming/guessds.cpp)
add_executable(applepie 01-programming/applepie.cpp)
add_executable(snowflake 01-programming/snowflake.cpp)
add_executable(raining 01-programming/raining.cpp)
add_executable(fences 01-programming/fences.cpp)
add_executable(chocolate 00-hello/chocolate.cpp)
add_executable(23o5 02-greedy/23o5.cpp)
add_executable(recommend 02-greedy/recommend.cpp)
add_executable(casting 02-greedy/casting.cpp)
add_executable(order 02-greedy/order.cpp)
add_executable(farida 03-dp/farida.cpp)
add_executable(knapsack 03-dp/knapsack.cpp)
add_executable(planning 03-dp/planning.cpp)
add_executable(hedge 03-dp/hedge.cpp)
add_executable(ip-lookup 04-strings/ip-lookup.cpp)
add_executable(globbing 04-strings/globbing.cpp)
add_executable(palindrom 04-strings/palindrom.cpp)
add_executable(vladimir 04-strings/vladimir.cpp)
add_executable(frenzy 04-strings/frenzy.cpp)
add_executable(perseq 04-strings/perseq.cpp)
add_executable(snippets snippets.cpp)
add_executable(shoal 05-graphs/shoal.cpp)
add_executable(party_recursive 05-graphs/party_recursive.cpp)
add_executable(party 05-graphs/party.cpp)
add_executable(indiana 05-graphs/indiana.cpp)
add_executable(area50 01-contest/area50.cpp)
add_executable(tutel 01-contest/tutel.cpp)
add_executable(parcelparadox 01-contest/parcelparadox.cpp)
add_executable(parcelparadox2 01-contest/parcelparadox2.cpp)
add_executable(boxing 05-graphs/boxing.cpp)
add_executable(boxing3 05-graphs/boxing3.cpp)
add_executable(battery 06-graphs2/battery.cpp)
add_executable(icecream 06-graphs2/icecream.cpp)
add_executable(skiing 06-graphs2/skiing.cpp)
add_executable(almost 06-graphs2/almost.cpp)
add_executable(thunder 07-graphs3/thunder.cpp)
add_executable(dnd 07-graphs3/dnd.cpp)
add_executable(essential 07-graphs3/essential.cpp)
add_executable(trading 07-graphs3/trading.cpp)
add_executable(justflow 08-flows/justflow.cpp)
add_executable(river 08-flows/river.cpp)
add_executable(hacking3 08-flows/hacking3.cpp)
add_executable(authenticart 02-contest/authenticart.cpp)
add_executable(badgermoles 02-contest/badgermoles.cpp)
add_executable(badgermoles2 02-contest/badgermoles2.cpp)
add_executable(diamond 02-contest/diamond.cpp)
add_executable(dungeon 08-flows/dungeon.cpp)
add_executable(penteracts 09-math/penteracts.cpp)
add_executable(gifts 09-math/gifts.cpp)
add_executable(creation 09-math/creation.cpp)
add_executable(medals 09-math/medals.cpp)
add_executable(circle circle.cpp)
